--- a/Webpage.html
+++ b/Webpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Storage Web App</title>
+    <title>Decentralized Storage</title>
     <link rel="stylesheet" href="Webpage.css">
 </head>
 <body>
