--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Authentication System</title>
+  <title>Decentralized Storage System</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="header">
-    <h1>Web Based Document Storage</h1>
+    <h1>Decentralizedt Storage</h1>
   </div>
   <div class="container">
     <div class="form" id="registrationForm">
