--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <p id="error-message"></p>
   </div>
-
+<a href="https://academy.binance.com/en/articles/what-is-decentralized-storage">Know about Decentralized Storage</a>
   <script src="script.js"></script>
 </body>
 </html>
